deploy/kube/db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: backend-db
spec:
  selector:
    matchLabels:
      app: backend-db
  template:
    metadata:
      labels:
        app: backend-db
    spec:
      containers:
        - name: database
          image: postgres:13.8-bullseye
          resources:
            limits:
              memory: "300Mi"
              cpu: "200m"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  namespace: backend
  name: "backend-db-service"
spec:
  selector:
    app: backend-db
  ports:
    - port: 5432
      targetPort: 5432
---
