deploy/kube/rabbit.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "backend"
  name: "backend-rmq"
spec:
  selector:
    matchLabels:
      app: "backend-rmq"
  template:
    metadata:
      labels:
        app: "backend-rmq"
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:3.11.6-alpine
          startupProbe:
            exec:
              command: ["rabbitmq-diagnostics", "check_running", "-q"]
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            limits:
              memory: "200Mi"
              cpu: "250m"
          ports:
            - containerPort: 5672
              name: amqp
---
apiVersion: v1
kind: Service
metadata:
  namespace: "backend"
  name: "backend-rmq-service"
spec:
  selector:
    app: "backend-rmq"
  ports:
    - port: 5672
      targetPort: amqp

---
